# soc2-sentinel

./: .coverage  .gitattributes  QUICKSTART-BUYER.md  README.md  plan.md  pyproject.toml  requirements.txt  run-demo.bat  sentinel.yaml.example
data/: controls-matrix.csv
docs/: AWS_IAM_POLICY.json  AZURE_SETUP.md  CMMC_L2_CONTROLS_REFERENCE.md  DFARS_7012_INCIDENT_PROCEDURE.md  INCIDENT_RESPONSE.md  KEY_ROTATION.md  MITRE_ATTCK_COVERAGE.md  SECURITY.md
policies/: access-control-policy-v2.3.md  authentication-access-policy-v2.1.md  backup-recovery-policy-v2.2.md  business-continuity-policy.md  micro-segmentation-policy.md
sales/: carrd-landing-copy.md  gumroad-description.md  whats-inside.md
scripts/: build-consumer-package.ps1
sentinel/: cli.py  cloud.py  config.py  errors.py  integrity.py  logging_config.py  output.py  schema.py  security.py  validation.py
soc2_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_audit.py  test_aws_config.py  test_aws_encryption.py  test_aws_encryption_full.py  test_aws_iam.py  test_aws_logging.py  test_aws_resilience.py  test_aws_retention.py  test_aws_zt.py  test_azure_iam.py  test_azure_modules.py  test_azure_resilience.py  test_azure_zt.py  test_chaos.py  test_cli.py  test_cli_direct.py  test_cli_extended.py  test_cli_report.py  test_cli_validate.py  test_cli_verify.py  test_cloud_retry.py  test_collectors.py  test_collectors_extended.py  test_concurrent_write.py  test_config.py  test_config_extended.py  test_gcp_config_direct.py  test_gcp_iam.py  test_gcp_modules.py  test_gcp_resilience.py  test_gcp_resilience_sql.py  test_gcp_zt.py  test_helpers_extended.py  test_integrity.py  test_integrity_extended.py  test_integrity_hmac.py  test_logging_config_direct.py  test_misc_coverage.py  (+17 more)
(+54 files in other folders)
