[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "soc2-sentinel"
version = "2.5.0"
description = "SOC2 Sentinel Toolkit — evidence automation for SOC2, NIST 800-171/172, CMMC L2/L3, DFARS, ATT&CK, and Zero Trust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34,<2",
  "jsonschema>=4.21,<5",
  "google-cloud-storage>=2.14,<3",
  "google-cloud-iam>=2.15,<3",
  "google-cloud-logging>=3.9,<4",
  "google-cloud-asset>=3.19,<4",
  "google-cloud-kms>=2.21,<3",
  "google-cloud-org-policy>=1.9,<2",
  "google-cloud-compute>=1.19,<2",
  "google-api-python-client>=2.120,<3",
  "azure-identity>=1.15,<2",
  "azure-mgmt-storage>=21.0,<22",
  "azure-mgmt-monitor>=6.0,<7",
  "azure-mgmt-resource>=23.0,<24",
  "azure-mgmt-resourcegraph>=8.0,<9",
  "azure-mgmt-recoveryservicesbackup>=9.0,<10",
  "cryptography>=42.0,<44",
  "pyyaml>=6.0,<7",
  "portalocker>=2.8,<4",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "bandit>=1.7",
  "ruff>=0.4",
  "pip-tools>=7.4",
  "moto>=5.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["sentinel"]
branch = true
omit = ["sentinel/providers/azure/_client.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false